# simple-notion

./: .gitignore  README.md
simple-notion/: Cargo.toml  README.md
simple-notion/src/: client.rs  lib.rs  non_magic.rs  notion.rs  notion_data_base.rs  parser.rs
