[package]
name = "simple-notion"
version = "0.1.0"
edition = "2021"
description = "Easy to use library to read-only Notion DataBase using the NotionAPI"
keywords = ["notion", "api"]
readme = "README.md"
repository = "https://github.com/eVisualUser/simple-notion"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.44"
json = "0.12.4"

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

pro_csv = "0.1.1"
